--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Automatic Investment</title>
   </head>
   <body>
-    <h1>Hi, I'm Muhmdshuaiiib and I'm gonna rule the world!</h1>
+    <h1>Hi, I'm Nicolas</h1>
   </body>
 </html>
