--- a/simple-momentum-crypto.html
+++ b/simple-momentum-crypto.html
@@ -19,7 +19,7 @@
     <meta name="twitter:image" content="" />-->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.8.1/dist/css/foundation.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="/website/css/style.css">
+    <link rel="stylesheet" href="website/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
@@ -45,7 +45,7 @@
           <a data-open="menu-website"><span class="material-icons">menu</span></a>
         </div>
         <div class="cell small-10">
-          <span class="website-title"><img src="/website/logo.png">&nbsp;Automatic Investment</span>
+          <span class="website-title"><img src="website/logo.png">&nbsp;Automatic Investment</span>
         </div>
         <div class="cell small-1">
           <a data-open="menu-user"><span class="material-icons">account_circle</span></a>
@@ -54,7 +54,7 @@
       <header class="top-bar hide-for-small-only">
         <div class="top-bar-left">
           <ul class="menu">
-            <li class="website-title"><img src="/website/logo.png">&nbsp;Automatic Investment</li>
+            <li class="website-title"><img src="website/logo.png">&nbsp;Automatic Investment</li>
             <li><a href="#">Portfolios</a></li>
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Other</a></li>
