--- a/simple-momentum-crypto.html
+++ b/simple-momentum-crypto.html
@@ -84,7 +84,14 @@
             </div>
             <div class="cell large-4">
               <h2>The Strategy</h2>
-              <p>Simple momentum investing is a popular trading strategy among traders for the simple reason that it takes the fundamentals of momentum investing and hones it into an even more effective approach. The target of this strategy? Equities that are experiencing price uptrends on both a relative and absolute basis.</p>
+              <p>The simple momentum strategy works as followed.<br />
+                For a list of assets, each momentum is calculated at a period that is pre-defined. Then, the asset to buy is simply the asset that has the strongest momentum.
+              </p>
+              <p>
+                Regarding the crypto world, the strategy considers 2 assets: <strong>BTC</strong> and <strong>ETH</strong>.<br />
+                The momentum is made of 4 close price and is triggered every Saturday.<br />
+                The formula is simply: <em>((P0 / P1 - 1) * 100 + (P0 / P2 - 1) * 100 + (P0 / P3 - 1) * 100) / 3</em>, PO = Last Friday, P1 = Friday 7 days ago, P2 = Friday 14 days ago and P3 = Friday 21 days ago.
+              </p>
             </div>
             <div class="cell large-8">
               <h2>Backtest</h2>
