--- a/simple-momentum-crypto.html
+++ b/simple-momentum-crypto.html
@@ -111,7 +111,7 @@
               <div id="drawing-fallback"></div>
             </div>
             <div class="cell large-12">
-              <p>&nbsp;</p>
+              <h2>PERFORMANCE DETAILS</h2>
               <p>&nbsp;</p>
               <p>&nbsp;</p>
               <p>&nbsp;</p>
