--- a/simple-momentum-crypto.html
+++ b/simple-momentum-crypto.html
@@ -19,7 +19,7 @@
     <meta name="twitter:image" content="" />-->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.8.1/dist/css/foundation.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="website/css/style.css">
+    <link rel="stylesheet" href="website/css/style.css?tmp=1705501621">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
