--- a/simple-momentum-crypto.html
+++ b/simple-momentum-crypto.html
@@ -76,7 +76,7 @@
                   <li><a href="#">Home</a></li>
                   <li><a href="#">Portfolios</a></li>
                   <li>
-                    <span class="show-for-sr">Current: </span> Dual Momentum
+                    <span class="show-for-sr">Current: </span> Crypto Simple Momentum
                   </li>
                 </ul>
               </nav>
