--- a/simple-momentum-crypto.html
+++ b/simple-momentum-crypto.html
@@ -90,7 +90,7 @@
               <p>
                 Regarding the crypto world, the strategy considers 2 assets: <strong>BTC</strong> and <strong>ETH</strong>.<br />
                 The momentum is made of 4 close price and is triggered every Saturday.<br />
-                The formula is simply: <em>((P0 / P1 - 1) * 100 + (P0 / P2 - 1) * 100 + (P0 / P3 - 1) * 100) / 3</em>, PO = Last Friday, P1 = Friday 7 days ago, P2 = Friday 14 days ago and P3 = Friday 21 days ago.
+                The Formula is simply: <em>((P0 / P1 - 1) * 100 + (P0 / P2 - 1) * 100 + (P0 / P3 - 1) * 100) / 3</em>, PO = Last Friday, P1 = Friday 7 days ago, P2 = Friday 14 days ago and P3 = Friday 21 days ago.
               </p>
               <p>
                 Choosing this strategy, you agree that:
