--- a/simple-momentum-crypto.html
+++ b/simple-momentum-crypto.html
@@ -88,9 +88,9 @@
                 For a list of assets, each momentum is calculated at a period that is pre-defined. Then, the asset to buy is simply the asset that has the strongest momentum. If all momentum are negative, then the system stays cash.
               </p>
               <p>
-                Regarding the crypto world, the strategy considers 2 assets: <strong>BTC</strong> and <strong>ETH</strong>.<br />
-                The momentum is made of 4 close price and is triggered every Saturday.<br />
-                The Formula is simply: <em>((P0 / P1 - 1) * 100 + (P0 / P2 - 1) * 100 + (P0 / P3 - 1) * 100) / 3</em>, PO = Last Friday, P1 = Friday 7 days ago, P2 = Friday 14 days ago and P3 = Friday 21 days ago.
+                The Crypto Simple Momentum strategy considers 2 assets: <strong>BTC</strong> and <strong>ETH</strong>. 
+                The momentum is made of 4 close prices and is triggered every Saturday.<br />
+                Formula:<br /><em>((P0 / P1 - 1) * 100 + (P0 / P2 - 1) * 100 + (P0 / P3 - 1) * 100) / 3</em>, <small>P0 = Last Friday, P1 = Friday 7 days ago, P2 = Friday 14 days ago and P3 = Friday 21 days ago</small>.
               </p>
               <p>
                 Choosing this strategy, you agree that:
