--- a/simple-momentum-crypto.html
+++ b/simple-momentum-crypto.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="website/css/style.css?tmp=1705501621">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
-  <body>
+  <body><!--
     <div class="off-canvas position-left" id="menu-website" data-off-canvas>
       <ul class="vertical menu">
         <li class="menu-text">MENU</li>
@@ -104,12 +104,12 @@
             <div class="cell large-8">
               <h2>Backtest</h2>
               <p>Since <i class="portfolio-start"></i> and an initial investment of <strong class="portfolio-equity-start"></strong>, the <i>Dual Momentum</i> strategy has returned <strong class="portfolio-equity"></strong>, while at the same time holding BTC through time would have made <strong class="btc-equity"></strong> and ETH <strong class="eth-equity"></strong>.
-              <!--<br />This backtest does not include dividends, and no money added.--></p>
+              <br />This backtest does not include dividends, and no money added</p>
               <button class="button" id="logarithmic" disabled="disabled">Logarithmic</button>
-              <button class="button" id="linear">Linear</button>
+              <button class="button" id="linear">Linear</button>-->
               <canvas id="drawing"></canvas>
               <div id="drawing-fallback"></div>
-            </div>
+            <!--</div>
             <div class="cell large-12">
               <h2>PERFORMANCE DETAILS</h2>
               <p>&nbsp;</p>
@@ -119,7 +119,7 @@
           </div>
         </div>
       </main>
-    </div>
+    </div>-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.8.1/js/foundation.min.js" crossorigin="anonymous"></script>
