--- a/simple-momentum-crypto.html
+++ b/simple-momentum-crypto.html
@@ -104,9 +104,9 @@
             <div class="cell large-8">
               <h2>Backtest</h2>
               <p>Since <i class="portfolio-start"></i> and an initial investment of <strong class="portfolio-equity-start"></strong>, the <i>Dual Momentum</i> strategy has returned <strong class="portfolio-equity"></strong>, while at the same time holding BTC through time would have made <strong class="btc-equity"></strong> and ETH <strong class="eth-equity"></strong>.
-              <br />This backtest does not include dividends, and no money added</p>
+              <br />This backtest does not include dividends, and no money added</p>-->
               <button class="button" id="logarithmic" disabled="disabled">Logarithmic</button>
-              <button class="button" id="linear">Linear</button>-->
+              <button class="button" id="linear">Linear</button>
               <canvas id="drawing"></canvas>
               <div id="drawing-fallback"></div>
             <!--</div>
