--- a/public-monthly-rents.html
+++ b/public-monthly-rents.html
@@ -41,6 +41,7 @@
             datasets: [{
               label: "Monthly Rents",
               data: rents,
+              backgroundColor: "#43888f",
               borderWidth: 1,
               lineTension: 0.2
             }]
