--- a/public-cumulative-rents.html
+++ b/public-cumulative-rents.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Cumulative Rents</title>
+    <title>Statistics</title>
     <meta name="robots" content="noindex, nofollow">
     <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="pragma" content="no-cache">
